--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 language: node_js
 node_js:
   - "12"
+
+branchs:
+  only:
+    - master
+
+cache:
+  directories:
+    - node_modules
+
 services:
   - docker
 
-before_install:
+install:
   - npm install
 
 script:
