--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -5,7 +5,7 @@ on:
       - master
 
 jobs:  
-  build:
+  build & deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -20,3 +20,17 @@ jobs:
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
         docker build -t dockerofliuyi/my-web:latest .
         docker push dockerofliuyi/my-web:latest
+
+    - name: SSH Remote Commands
+      uses: appleboy/ssh-action@v0.1.3
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        port: ${{ secrets.PORT }}
+        script: |
+          cd /www/server/docker-compose
+          docker-compose pull info
+          docker-compose stop info
+          docker-compose rm info
+          docker-compose up -d info
