--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,12 +1,15 @@
 name: my-web
-on: 
+on:
   push:
     branchs:
-      - master
+      - master  # 只在master上push触发部署
+    paths-ignore:  # 下列文件的变更不触发部署，可以自行添加
+      - README.md
+      - LICENSE
 
-jobs:  
+jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 使用ubuntu系统镜像运行自动化脚本
     steps:
     - name: Checkout
       uses: actions/checkout@v2.3.3
