--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -14,6 +14,19 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2.3.3
 
+    - name: Cache node modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+
     - name: Install
       run: npm install
 
@@ -32,7 +45,7 @@ jobs:
         key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          cd /www/server/docker-compose
+          cd docker-compose
           docker-compose pull info
           docker-compose stop info
           docker-compose rm info
