--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -48,5 +48,5 @@ jobs:
           cd docker-compose
           docker-compose pull info
           docker-compose stop info
-          docker-compose rm info
+          docker-compose rm -f info
           docker-compose up -d info
