--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/checkout@v2.3.3
 
     - name: Cache node modules
+      id: cache-npm
       uses: actions/cache@v2
       env:
         cache-name: cache-node-modules
@@ -28,6 +29,7 @@ jobs:
           ${{ runner.os }}-
 
     - name: Install
+      if: steps.cache-npm.outputs.cache-hit != 'true'
       run: npm install
 
     - name: Build
